--- a/style.css
+++ b/style.css
@@ -6,3 +6,21 @@ body{
   max-width: 600px;
   font-family:'Roboto Slab', serif;
 }
+nav{
+  background-color: #E9E3E6;
+}
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li{
+  margin: 2px;
+  padding: 40px;
+  border: 1px solid white;
+}
+a{
+  text-decoration:none;
+  font-weight: bold;
+  font-style: italic;
+}
