--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+h1{
+  font-family:'Roboto Slab', serif;
+}
+h2{
+  font-family:'Glory', sans-serif;
+}
 body{
   background: #FADAEA;
   text-align: center;
