change color of a

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a{
   text-decoration:none;
   font-weight: bold;
   font-style: italic;
-  color: black;
+  color: orange;
 }
 a:hover{
   color: red;
