add font type lora

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
   margin: auto;
   margin-top: 3rem;
   max-width: 600px;
-  font-family:'Roboto Slab', serif;
+  font-family: 'Lora', serif;
 }
 nav{
   background-color: #E9E3E6;
