--- a/style.css
+++ b/style.css
@@ -10,16 +10,16 @@ head{
   background-color: #F7A999;
 }
 body{
-  background: #FADAEA;
   text-align: center;
-  margin: auto;
+  margin-left: 0px;
+  margin-right: 0px;
   margin-top: 3rem;
-  max-width: 90%;
+  max-width: 100%;
   font-family: 'Lora', serif;
 }
 nav{
-  background-color: #E9E3E6;
-  max-width: 100%;
+  background-color: #F5C359;
+  width: 100%;
 }
 #menu_nav{
   list-style-type: none;
@@ -27,16 +27,19 @@ nav{
   padding: 0;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
-li{
+.nav-content{
   margin: 0;
   padding: 30px;
+  font-size: 1em;
+  height:20px;
 }
 a{
   text-decoration:none;
   font-weight: bold;
   font-style: italic;
-  color: orange;
+  color: black;
 }
 a:hover{
   color: red;
@@ -45,14 +48,12 @@ a:hover{
   display: none;
 }
 @media (max-width: 600px) {
-
-  ul {
-    flex-direction: column;
-  }
-
-  li {
-    width: 100%;
-  }
+.nav-content{
+  padding:10px;
+}
+ul{
+  flex-direction: column;
+}
 
   #menu_trigger {
     display: block;
