--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 h1{
   font-family:'Roboto Slab', serif;
   font-weight: 700;
+  text-align: center;
 }
 h2{
   font-family:'Glory', sans-serif;
@@ -10,7 +11,6 @@ head{
   background-color: #F7A999;
 }
 body{
-  text-align: center;
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 3rem;
@@ -31,9 +31,23 @@ nav{
 }
 .nav-content{
   margin: 0;
-  padding: 30px;
+  padding: 15px;
   font-size: 1em;
   height:20px;
+}
+.self-intro{
+  display: flex
+}
+.text{
+  margin-left: 100px;
+  margin-top: 50px;
+}
+#headshot{
+  margin-top: 50px;
+  margin-left: 50px;
+}
+#copyright{
+  text-align: center;
 }
 a{
   text-decoration:none;
