--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
 h1{
   font-family:'Roboto Slab', serif;
   font-weight: 700;
-  text-align: center;
+}
+#home-hi{
+  background-image:url(head.jpg);
+  height: 700px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding-left: 50px;
+  font-size: 4em;
+  color:#F5C359;
+  text-shadow: 2px 5px 10px #000000;
 }
 h2{
   font-family:'Glory', sans-serif;
@@ -13,7 +28,7 @@ head{
 body{
   margin-left: 0px;
   margin-right: 0px;
-  margin-top: 3rem;
+  margin-top: 0px;
   max-width: 100%;
   font-family: 'Lora', serif;
 }
@@ -41,6 +56,8 @@ nav{
 .text{
   margin-left: 100px;
   margin-top: 50px;
+  font-size: 1em;
+  line-height: 3;
 }
 #headshot{
   margin-top: 50px;
@@ -49,9 +66,18 @@ nav{
 #copyright{
   text-align: center;
 }
+.theme{
+  text-align: center;
+}
 .content{
   margin-left: 100px;
   margin-right: 100px;
+}
+.text-title{
+  text-align: center;
+}
+.author{
+  text-align: center;
 }
 #video-main{
   margin-left: 30px;
@@ -71,7 +97,7 @@ nav{
   font-size: 1.25em;
   font-weight: bold;
 }
-.text{
+.text-intern{
   list-style-type: none;
   font-size: 1.5em;
   width: 500px;
