--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1{
   font-weight: 700;
 }
 #home-hi{
-  background-image:url(head.jpg);
+  background-image:url(bg-img.JPG);
   height: 700px;
   background-position: center;
   background-repeat: no-repeat;
